# kck

./: pyproject.toml  requirements.txt
src/frontend/: package-lock.json  package.json
src/frontend/src/: AddTodo.js  AddTodo.scss  App.js  App.scss  GetTodo.js  GetTodo.scss  PutTodo.js
src/todo_app/: __main__.py  cli.py  todo_api.py  todo_class.py
